<resources>
    <string name="app_name">utiltool2</string>
    <string name="imageview_description">imageview</string>
    <string name="question_content">2015年，中国科学家屠呦呦获得了诺贝尔物理学奖，2015年，中国科学
        家屠呦呦获得了诺贝尔物理学奖，2015年，中国科学家屠呦呦获得了诺贝尔物理学奖</string>
    <string name="answer_content">售后IE后ishis的和红sh合还ssh合还hsoshs合还shi合还h合还i合还
        色的好多课kid恶化啮合还是我</string>

    <!-- 圆角星星 svg 路径-->
    <string name="round_star">
        M333.312 257.856c-8.832 16.512-22.208 27.264-36.224 28.736l-208.64 30.272C8.064 330.24-23.68 430.528 33.664 490.176l150.016 150.912a52.48 52.48 0 0 1 14.848 44.928l-36.352 214.08c-12.864 83.648 70.784 147.072 141.632 106.88l185.472-100.288a42.752 42.752 0 0 1 44.8-0.256l186.56 100.8c70.464 39.936 154.048-23.488 141.312-106.752l-36.416-213.952a60.16 60.16 0 0 1 15.104-45.696l149.376-150.464c57.728-59.968 25.984-160.192-53.888-173.504l-208.256-30.144c-16.512-3.456-30.912-14.208-36.8-27.968L598.912 61.888A94.464 94.464 0 0 0 425.024 62.08L333.312 257.856m0 0
    </string>

    <string name="star1">
        M1059.781386 388.302147c-0.221894-63.487904-352.720728-71.123682-352.720728-71.123681s-89.436496-317.178466-177.136994-317.178466C442.523375 0.05221 351.272567 319.332147 351.272567 319.332147S0.470573 307.75448 0.000679 388.302147c-0.469894 79.620932 244.814786 267.578541 244.814786 267.578542s-85.625133 315.338048-42.420988 360.63061c44.509406 42.773409 328.181818-150.405245 328.181817-150.405245s279.861049 198.399699 326.798241 150.405245c46.989402-51.544764-41.037411-360.63061-41.037411-360.63061s243.692262-200.879695 243.444262-267.578542z m-577.72165 55.029812c-166.003116 78.119881-328.064344-0.404631-328.064344-0.404631-68.604527-67.012109 108.519414-41.455095 108.519415-41.455095s-2.04926-2.962943 114.471405-18.952393 136.908845-239.097742 136.908845-239.097742c9.554512-54.259707 41.4812-35.111526 41.4812-35.111526s71.945996 256.3794-73.316521 335.021387z
    </string>

    <string name="column2">Column2</string>
    <string name="column1">Column1</string>
    <string name="column3">Column3</string>
    <string name="column4">Column4</string>
    <string name="column5">Column5</string>
    <string name="column6">Column6</string>
    <string name="column7">Column7</string>

</resources>
