<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/column1"
        android:textColor="#333333" />

    <com.example.utiltool2.ui.ScrollTable.InterceptScrollContainer
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/textview1"
        android:layout_toRightOf="@id/textview1"
        android:focusable="false">


        <com.example.utiltool2.ui.ScrollTable.HScrollView
            android:id="@+id/hscrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/column2"
                    android:textColor="#333333" />

                <TextView
                    android:id="@+id/textview3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/column3"
                    android:textColor="#333333" />

                <TextView
                    android:id="@+id/textview4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/column4"
                    android:textColor="#333333" />

                <TextView
                    android:id="@+id/textview5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/column5"
                    android:textColor="#333333" />

                <TextView
                    android:id="@+id/textview6"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/column6"
                    android:textColor="#333333" />

                <TextView
                    android:id="@+id/textview7"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/column7"
                    android:textColor="#333333" />

            </LinearLayout>

        </com.example.utiltool2.ui.ScrollTable.HScrollView>

    </com.example.utiltool2.ui.ScrollTable.InterceptScrollContainer>


</RelativeLayout>